implement the rest of vehicle endpoints
